cifre timer in html

--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
   <body onload="foo()">
 <div class="container-fluid">
     <div class="row align-items-center">
-<div class="col-xs-4 offset-xs-4"><i class="material-icons md-36">face</i> </div>
-<div id="nume" class="col-xs-2 accountNume"></div>
+      <div class="col-xs-4 offset-xs-4"><i class="material-icons md-36">face</i></div>
+      <div  class="col-xs-2 accountNume" id="nume"></div>
+    </div>
 
 </div>
 
-</div>
 <div><i id="plus" class="material-icons md-96 perfect-centering">add_circle</i></div>
-<div class="fixed-bottom container-fluid" id="footer">
+<div><h1 class="display-1 perfect-centering">59:00</h1></div>
 
-  <div class="row justify-content-center">
-<div class="col-xs-1"><button type="button" class="btn btn-lg btn-outline-primary" >60 sec</button></div>
-<div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary active" >90 sec</button></div>
-<div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary " >120 sec</button></div>
-</div>
+<div class="container-fluid fixed-bottom" id="footer">
+    <div class="row justify-content-center">
+      <div class="col-xs-1"><button type="button" class="btn btn-lg btn-outline-primary" >60 sec</button></div>
+      <div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary active" >90 sec</button></div>
+      <div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary " >120 sec</button></div>
+    </div>
 </div>
  
 
