--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <div><i id="plus" class="material-icons md-96 perfect-centering">add_circle</i></div>
-<div><h1 class="display-1 perfect-centering" id="timer">59:00</h1></div>
+<div><h1 class="display-1 perfect-centering" id="timer"></h1></div>
 <div><button type="button" id="stop" class="btn btn-danger btn-lg perfect-centering2">STOP</button></div>
 
 <div class="container-fluid fixed-bottom" id="footer">
