--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 <div class="container-fluid fixed-bottom" id="footer">
     <div class="row justify-content-center">
-      <div class="col-xs-1"><button type="button" class="btn btn-lg btn-outline-primary" >60 sec</button></div>
-      <div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary active" >90 sec</button></div>
-      <div class="col-xs-1 "><button type="button" class="btn btn-lg btn-outline-primary " >120 sec</button></div>
+      <div class="col-xs-1"><button type="button" id="sec60" class="btn btn-lg btn-outline-primary selector" >60 sec</button></div>
+      <div class="col-xs-1 "><button type="button" id="sec90" class="btn btn-lg btn-outline-primary selector" >90 sec</button></div>
+      <div class="col-xs-1 "><button type="button" id = "sec120" class="btn btn-lg btn-outline-primary selector" >120 sec</button></div>
     </div>
 </div>
  
